bad/bin_op_lth_null_bool.example_compiler_output
ERROR
[1mbad/bin_op_lth_null_bool.lat:3:7: [1;31merror: [0;1moperator < is defined only for int values and string values, not `null` and `boolean`[m
	null < true;
	     [1;32m^[m
